--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,10 +11,20 @@
 
 - clean:
     - '~'
-    - ~/.config
+    - '~/.config'
+    - '~/.config/fish'
+    - '~/.config/fish/functions'
+    - '~/.config/fish/completions'
+    - '~/.vim'
 
 - link:
     ~/.dotfiles: ""
     ~/.vimrc:
     ~/.vim:
-
+    ~/.config/fish/config.fish: fish/config.fish
+    ~/.config/fish/abbrs: fish/abbrs
+    ~/.config/fish/aliases: fish/aliases
+    ~/.config/fish/exports: fish/exports
+    ~/.config/fish/path: fish/path
+    ~/.config/fish/functions: fish/functions
+    ~/.config/fish/completions: fish/completions
