--- a/.gitmodules
+++ b/.gitmodules
@@ -51,7 +51,7 @@
 	url = git://github.com/tpope/vim-surround.git
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
-	url = git@github.com:vim-syntastic/syntastic.git
+	url = https://github.com/vim-syntastic/syntastic.git
 [submodule "vim/bundle/jedi"]
 	path = vim/bundle/jedi
 	url = git@github.com:davidhalter/jedi.git
