--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
     ~/.dotfiles: ""
     ~/.vim:
     ~/.vimrc:
+    ~/.gitignore_global:
     ~/.config/fish/config.fish: fish/config.fish
     ~/.config/fish/abbrs: fish/abbrs
     ~/.config/fish/aliases: fish/aliases
