--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,20 @@
-
-set -g status on
-
+# mouse controls
 set-option -g mouse on
 
+# status bar
+set -g status on
+
+# shell
 set-option -g default-command /usr/local/bin/fish
+
+# window index
+set -g base-index 1
+setw -g pane-base-index 1
+
+# keep same path in new panes
+bind '%' split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
+
+# scrollback buffer
+set-option -g history-limit 5000
