renumber tmux windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ set-option -g default-command /usr/local/bin/fish
 # window index
 set -g base-index 1
 setw -g pane-base-index 1
+set-option -g renumber-windows on
 
 # keep same path in new panes
 bind '%' split-window -h -c '#{pane_current_path}'
